Fixed z-index for reversed promo with columns (#214)

--- a/src/rendering/src/assets/css/components/nextjs-sxa/Promo.css
+++ b/src/rendering/src/assets/css/components/nextjs-sxa/Promo.css
@@ -93,6 +93,7 @@
       }
 
       .promo-text {
+        @apply relative z-10;
         @apply lg:-mr-20 lg:ml-0;
       }
 
